@@ -93,7 +93,7 @@ static struct sparc_rel_desc sparc_rels[] = {
 };
 
 bfd_reloc_status_type
-pmbfd_perform_relocation(bfd *abfd, pmbfd_arelent *r, asymbol *psym, asection *input_section)
+pmbfd_perform_relocation(bfd *abfd, pmbfd_relent_t rtype, pmbfd_arelent *r, asymbol *psym, asection *input_section)
 {
 Elf32_Word     pc;
 int64_t        val, msk;
